2004-02-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/ralloc.c (packRegsForAssign, reassignAliasedSym): fixed
	bug #895752 and a better fix for bug #716790

2004-02-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.c (processFuncArgs): fixed bug #896796

2004-02-14 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* doc/sdccman.lyx: minor changes, minor changed

2004-02-13 Bernhard Held <bernhard AT bernhardheld.de>

	* src/SDCCicode.c (usualBinaryConversions): removed pic16 from ports
	which can't handle SDCC_NEWONEBYTEOPS,
	(geniCodeMultiply): removed conversion from mult to shift for pic14
	and pic16

2004-02-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.h,
	* src/hc08/gen.c (storeRegToAop, aopOp, aopAdrStr, accopWithAop,
	rmwWithAop): Ported my 2003-10-02 fix for bug #663539 to the hc08,
	thus fixing bug #895406

2004-02-11 Bernhard Held <bernhard AT bernhardheld.de>

	* device/lib/_modsint.c,
	* device/lib/_modslong.c: sign follows divisor only
	* src/hc08/gen.c (genMultOneByte): if result size is 1,
	signs or signedness can be ignored
	* src/SDCCast.c (addCast): cosmetic - added lineno to CAST
	* src/SDCCast.c (resultTypePropagate): added even more ops: +, - and *,
	added optimization for IFX,
	(decorateType): Mult/Div/ModOneByte ops can handle all kind of signed
	arguments;
	reenabled optimization for IFX, which was removed on 2004-01-11
	* src/SDCCast.h: added return type IFX
	* src/SDCCicode.c: Mult/Div/ModOneByte ops can handle all kind of signed
	arguments with 8 or 16 bit results; pic14 and pic16 ports use old
	promotion behaviour; env. var. SDCC_NEWONEBYTEOPS selects the new,
	SDCC_OLDONEBYTEOPS selects the old behaviour
	* src/SDCCsymt.c (computeType): type2 can be NULL (for LEFT_OP);
	changed again and commented promotion rule
	* src/SDCCval.c (valDiv): promotion no longer necessary
	* src/ds390/gen.c (genMultOneByte) (genDivOneByte) (genModOneByte),